force-app/main/default/objects/Activity_Participant__c/Activity_Participant__c.object-meta.xml
<CustomObject>
    <label>活动参与者</label>
    <nameField>
        <displayFormat>APT-{00000}</displayFormat>
        <label>Activity Participant No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>