force-app/main/default/objects/Activity_Participant__c/fields/Customer_Activity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Activity</label>
    <referenceTo>Campaign__c</referenceTo>
    <relationshipLabel>Activity Participant</relationshipLabel>
    <relationshipName>Activity_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>