force-app/main/default/objects/Activity_Participant__c/fields/Customer_Participant__c.field-meta.xml
<CustomField>
    <fullName>Customer_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Activity Participant</relationshipLabel>
    <relationshipName>Activity_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>