force-app/main/default/objects/Activity_Participant__c/fields/Hisense_Participant__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hisense Participant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activity_Participant</relationshipName>
    <type>Lookup</type>
</CustomField>