force-app/main/default/objects/Activity_Participant__c/recordTypes/Customer_Participant.recordType-meta.xml
<RecordType>
    <fullName>Customer_Participant</fullName>
    <active>true</active>
    <label>Customer Participant</label>
</RecordType>